# CnC_and_Red_Alert

./: .gitignore  .gitmodules  CMakeLists.txt  docker-compose.yaml
.github/workflows/: cmake-multi-platform.yml
RA/: 2keyfbuf.cpp  CMakeLists.txt  aircraft.h  buff.cpp  building.cpp  building.h  ccdde.cpp  cell.cpp  conquer.cpp  const.cpp  coord.cpp  defines.h  display.cpp  drive.cpp  event.h  externs.h  field.cpp  field.h  filepcx.h  foot.cpp  function.h  gscreen.cpp  house.cpp  infantry.cpp  infantry.h  ini.cpp  init.cpp  lcwuncmp.cpp  loaddlg.cpp  mixfile.cpp  mixfile.h  monoc.h  netdlg.cpp  nondosstub.cpp  nulldlg.cpp  packet.cpp  packet.h  radar.cpp  scenario.cpp  score.cpp  (+14 more)
SDLLIB/: audio.cpp  file.cpp  mouse.cpp  timer.cpp  wsa.cpp
TD/: CMakeLists.txt  aircraft.h  base.h  building.cpp  building.h  ccdde.cpp  cdata.cpp  cell.cpp  coord.cpp  display.cpp  drive.cpp  ending.cpp  externs.h  foot.cpp  function.h  heap.h  infantry.cpp  infantry.h  init.cpp  intro.cpp  monoc.h  netdlg.cpp  nondosstub.cpp  nulldlg.cpp  options.cpp  overlay.h  rawfile.cpp  score.cpp  score.h  sdlstub.cpp  smudge.h  stats.cpp  target.cpp  teamtype.h  techno.h  template.h  terrain.h  trigger.h  unit.cpp  unit.h  (+1 more)
